[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/CreateFolderButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/actions/RenameFolderButton.gd" type="Script" id=2]
[ext_resource path="res://ui/actions/LocationActions.gd" type="Script" id=3]

[node name="LocationActions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="LocationName" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_bottom = 17.0

[node name="RenameFolderButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 73.0
margin_bottom = 20.0
text = "(rename)"
script = ExtResource( 2 )

[node name="CreateFolderButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 77.0
margin_top = 0.0
margin_right = 164.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "(new folder)"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/RenameFolderButton" to="VBoxContainer/HBoxContainer/RenameFolderButton" method="_on_RenameFolderButton_pressed"]
